Pending changes exported from your codespace

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,8 @@
 [theme]
-primaryColor = "#3fb0e8"
-backgroundColor = "#192841"
-secondaryBackgroundColor = "#3fb0e8"
-textColor = "#f9f9f9"
+primaryColor = "#3fb0e8"          # Primary color for buttons, checkboxes, etc.
+backgroundColor = "#192841"       # Background color of the app.
+secondaryBackgroundColor = "#3fb0e8"  # Background color for sidebar and secondary sections.
+textColor = "#f9f9f9"             # Text color throughout the app.
+font = "sans serif"               # Font style (can also be "serif", "monospace", etc.)
+
+
